<resources>

    <!--
        Please check naming-conventions.txt for the string naming convention!
    -->

    <!-- Global strings -->
    <string name="app__name">Anamnesis</string>

    <!-- Home -->
    <string name="home__title">Anamnesis</string>
    <string name="home__nav__open">Open navigation drawer</string>
    <string name="home__nav__close">Close navigation drawer</string>
    <string name="home__nav__subtitle">Team 4</string>
    <string name="home__nav__desc">Navigation header</string>
    <string name="home__nav__settings">Settings</string>
    <string name="home__new_group__title">New group</string>
    <string name="home__new_group__hint">Name</string>
    <string name="home__rename_group__title">Rename group</string>
    <string name="home__new_group__snackbar">Created group "%1$s"</string>
    <string name="home__renamed_group__snackbar">Renamed group "%1$s" to "%2$s"</string>
    <string name="home__deleted_group__snackbar">Deleted group "%1$s"</string>
    <string name="home__deleted_group__snackbar_action">Undo</string>
    <string name="home__empty_title">No groups</string>
    <string name="home__empty_subtitle">Add a group to organize your flashcard decks.</string>
    <string name="home__item__rename">Rename</string>
    <string name="home__item__delete">Delete group</string>

    <!-- TextInputDialog component -->
    <string name="textinputdialog__button__negative">Cancel</string>
    <string name="textinputdialog__button__positive">OK</string>

    <!-- Group -->
    <string name="group__new_deck__title">New deck</string>
    <string name="group__new_deck__hint">Name</string>
    <string name="group__new_deck__snackbar">Created deck "%1$s"</string>
    <string name="group__delete_deck__snackbar">Deleted deck "%1$s"</string>
    <string name="group__empty_title">No flashcard decks</string>
    <string name="group__empty_subtitle">Add a flashcard deck to start studying a topic.</string>
    <string name="group__edit__snackbar">Saved "%1$s"</string>
    <string name="group__item__edit">Edit</string>
    <string name="group__item__delete">Delete deck</string>

    <!-- Settings -->
    <string name="settings__title">Settings</string>
    <string name="settings__animations">Enable flashcard animations</string>
    <string name="settings__font_size">Font size</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_enable_flashcard_animations">Enable flashcard animations</string>
    <string name="pref_enable_flashcard_animations_description">
    </string>

    <string name="pref__font_size">Font size</string>
    <string name="pref__font_size__default">12 pt</string>
    <string-array name="pref__font_size__values">
        <item>12 pt</item>
        <item>14 pt</item>
        <item>16 pt</item>
        <item>20 pt</item>
        <item>24 pt</item>
    </string-array>

    <string name="pref_title_add_friends_to_messages">Font size</string>
    <string-array name="pref_example_list_titles">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_description_social_recommendations" />
    <string name="pref_title_social_recommendations" />
    <string name="pref_default_display_name" />
    <string name="pref_title_display_name" />

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="mode_option_scored">Scored mode</string>
    <string name="mode_option_scored_desc">
        In scored mode, you\'re randomly shown your flashcards and are scored on whether or not you answer the questions
        on them correctly. You can\'t go back and review cards you\'ve already seen.
    </string>
    <string name="mode_option_unscored">Unscored mode</string>
    <string name="mode_option_unscored_desc">
        In unscored mode, you\'re shown your flashcards in order. You aren\'t timed or scored, and can freely view any
        flashcard in the deck.
    </string>
    <string name="mode_option_stealth">Stealth mode</string>
    <string name="mode_option_stealth_desc">
        In stealth mode, you\'re shown your flashcards in order, and both sides are visible at the same time.
        You aren\'t timed or scored, and can freely view any flashcard in the deck. The screen will change to a dark
        theme so you can study without attracting attention.
    </string>
    <string name="mode_title_default">Select a study mode</string>
    <string name="mode_activity_title">Study "%1$s"</string>
    <string name="mode_start">Start</string>

    <string name="title_activity_edit_deck">EditDeck</string>
    <string name="edit_title">Edit "%1$s"</string>
    <string name="edit_top_text_default">Tap to edit top text</string>
    <string name="edit_bottom_text_default">Tap to edit bottom text</string>
    <string name="edit_empty_title">No flashcards</string>
    <string name="edit_empty_subtitle">Add a flashcard and it will show up here.</string>
    <string name="edit_snackbar_card_added">Added flashcard</string>
    <string name="edit_snackbar_card_deleted">Deleted flashcard</string>
    <string name="edit_scroll_indicator_text">"%1$s" / "%2$s"</string>

    <string name="study_correct">Correct</string>
    <string name="study_incorrect">Incorrect</string>
    <string name="title_activity_results">ResultsActivity</string>


</resources>
